Improved admin token storage and generation
